--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,95 +1,51 @@
-   {
-    // 使用 IntelliSense 了解相关属性。 
-    // 悬停以查看现有属性的描述。
-    // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
+{
     "version": "0.2.0",
     "configurations": [
         
         {
-            "name": "gcc.exe - 生成和调试活动文件",
+            "name": "(gdb) 启动",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}\\coin\\${fileBasenameNoExtension}.exe",
+            "program": "${fileDirname}/${fileBasenameNoExtension}.exe",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}", // 调试程序时的工作目录，一般为${workspaceFolder}即代码所在目录 
+            "cwd": "${workspaceRoot}",
             "environment": [],
             "externalConsole": true,
             "MIMode": "gdb",
             "miDebuggerPath": "E:\\Application\\Program\\mingw64\\bin\\gdb.exe",
+            "preLaunchTask": "g++",
             "setupCommands": [
                 {
                     "description": "为 gdb 启用整齐打印",
                     "text": "-enable-pretty-printing",
                     "ignoreFailures": true
-                },
+                }
+            ]
+        },
+        {
+            "name": "(gdb) 启动",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${fileDirname}/${fileBasenameNoExtension}.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceRoot}",
+            "environment": [],
+            "externalConsole": true,
+            "MIMode": "gdb",
+            "miDebuggerPath": "E:\\Application\\Program\\mingw64\\bin\\gdb.exe",
+            "preLaunchTask": "g++",
+            "setupCommands": [
                 {
-                    "description": "将反汇编风格设置为 Intel",
-                    "text": "-gdb-set disassembly-flavor intel",
+                    "description": "为 gdb 启用整齐打印",
+                    "text": "-enable-pretty-printing",
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "C/C++: gcc.exe 生成活动文件"
+            "configSource": "workspaceFolder",
+            "detail": "preLaunchTask: g++",
+            "existing": true
         }
     ]
 }
-
-
-// {
-//     "configurations": [
-//     {
-//         "name": "(gdb) 启动",
-//         "preLaunchTask": "C/C++: gcc.exe 生成活动文件",
-//         "type": "cppdbg",
-//         "request": "launch",
-//         "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
-//         "args": [],
-//         "stopAtEntry": false,
-//         "cwd": "${fileDirname}",
-//         "environment": [],
-//         "externalConsole": false,
-//         "MIMode": "gdb",
-//         "miDebuggerPath": "E:\\Application\\Program\\mingw64\\bin\\gdb.exe",
-//         "setupCommands": [
-//             {
-//                 "description": "为 gdb 启用整齐打印",
-//                 "text": "-enable-pretty-printing",
-//                 "ignoreFailures": true
-//             },
-//             {
-//                 "description": "将反汇编风格设置为 Intel",
-//                 "text": "-gdb-set disassembly-flavor intel",
-//                 "ignoreFailures": true
-//             }
-//         ]
-//     }
-//     ]
-// } // {
-// //     "configurations": [
-        
-// //     {
-// //         "name": "(gdb) 启动",
-// //         "type": "cppdbg",
-// //         "request": "launch",
-// //         "program": "${fileDirname}/${fileBasenameNoExtension}",  // 关键配置, 要和 tasks.json 一样
-// //         "args": [],
-// //         "stopAtEntry": false,
-// //         "cwd": "${fileDirname}",
-// //         "environment": [],
-// //         "externalConsole": false,
-// //         "MIMode": "gdb",
-// //         "setupCommands": [
-// //             {
-// //                 "description": "为 gdb 启用整齐打印",
-// //                 "text": "-enable-pretty-printing",
-// //                 "ignoreFailures": true
-// //             },
-// //             {
-// //                 "description": "将反汇编风格设置为 Intel",
-// //                 "text": "-gdb-set disassembly-flavor intel",
-// //                 "ignoreFailures": true
-// //             }
-// //         ]
-// //     }
-// //     ]
-// // }
