--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,21 +1,17 @@
 {
+    "version":"2.0.0",
     "tasks": [
         {
-            "type": "cppbuild",
-            "label": "C/C++: gcc.exe 生成活动文件",
+            "label": "g++",
+            "type": "shell",
             "command": "E:\\Application\\Program\\mingw64\\bin\\g++.exe",
             "args": [
-                "-fdiagnostics-color=always",
-                "-g",
                 "${file}",
                 "-o",
-        // "${fileDirname}\\coin\\${fileBasenameNoExtension}.exe",  
-       //使用该路径在对创建的子文件夹内的程序进行调试时会出现"launch:program“*******” does not exist",详细解释请往下看
-               "${workspaceFolder}\\coin\\${fileBasenameNoExtension}.exe",
-                "-fexec-charset=GBK"       
+                "${fileDirname}/${fileBasenameNoExtension}.exe"
             ],
             "options": {
-              "cwd": "${workspaceFolder}"
+                "cwd": "E:\\Application\\Program\\mingw64\\bin"
             },
             "problemMatcher": [
                 "$gcc"
@@ -26,36 +22,5 @@
             },
             "detail": "调试器生成的任务。"
         }
-    ],
-    "version": "2.0.0"
+    ]
 }
-
-
-// {
-//     "tasks": [
-//         {
-//             "type": "cppbuild",
-//             "label": "C/C++: gcc.exe 生成活动文件",
-//             "command": "E:\\Application\\Program\\mingw64\\bin\\g++.exe",
-//             "args": [
-//                 "-fdiagnostics-color=always",
-//                 "-g",
-//                 "${file}",
-//                 "-o",
-//                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
-//             ],
-//             "options": {
-//                 "cwd": "${fileDirname}"
-//             },
-//             "problemMatcher": [
-//                 "$gcc"
-//             ],
-//             "group": {
-//                 "kind": "build",
-//                 "isDefault": true
-//             },
-//             "detail": "调试器生成的任务。"
-//         }
-//     ],
-//     "version": "2.0.0"
-// }
